# kobodeluxe

./: CMakeLists.txt  README.md
icons/: kobodl.icns
src/: CMakeLists.txt  gamectl.cpp  kobo.cpp  manage.cpp  options.cpp  prefs.cpp  states.cpp
src/graphics/: filters.c  gfxengine.cpp  gfxengine.h  sprite.c  window.cpp
src/sound/: audio.c
